--- a/src/i18n/vi/validation.json
+++ b/src/i18n/vi/validation.json
@@ -5,5 +5,6 @@
     "MIN_LENGTH": "{property} phải chứa ít nhất {constraints.0} kí tự hoặc số",
     "MAX_LENGTH": "{property} phải nhỏ hơn {constraints.0} kí tự hoặc số",
     "MIN_VALUE": "{property} phải lớn hơn {constraints.0}",
-    "MAX_VALUE": "{property} phải nhỏ hơn {constraints.0}"
+    "MAX_VALUE": "{property} phải nhỏ hơn {constraints.0}",
+    "INVALID_ENUM_VALUE": "{property} phải là một trong các giá trị sau: {values}"
 }
